# glacier-pinquery

./: CMakeLists.txt  glacier-pinquery.pro  glacier-pinquery.service
qml/: NumButton.qml  PinEntry.qml  PinNumPad.qml  PinPage.qml
rpm/: glacier-pinquery.spec
src/: CMakeLists.txt  main.cpp  ofonosimif.cpp  ofonosimif.h
src/qml/: BackButton.qml  NumButton.qml  PinActionButton.qml  PinEntry.qml  PinNumPad.qml  PinPage.qml  glacier-pinquery.qml  glacier-pinquery.qrc
translations/: glacier-pinquery.ts  glacier-pinquery_cs.ts  glacier-pinquery_de.ts  glacier-pinquery_fi.ts  glacier-pinquery_fr.ts  glacier-pinquery_pl.ts  glacier-pinquery_ru.ts  glacier-pinquery_uk.ts
